@@ -1,6 +1,6 @@
 package com.project.tripmate.tourAPI.controller;
 
-import com.project.tripmate.global.jsonResponse.CoursePlaceJsonResponse;
+import com.project.tripmate.global.JsonResponse;
 import com.project.tripmate.tourAPI.domain.CoursePlace;
 import com.project.tripmate.tourAPI.dto.CoursePlaceDTO;
 import com.project.tripmate.tourAPI.service.CoursePlaceService;
@@ -12,7 +12,6 @@ import org.springframework.web.bind.annotation.*;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/course-places")
@@ -26,7 +25,7 @@ public class CoursePlaceController {
     }
 
     @PostMapping
-    public ResponseEntity<CoursePlaceJsonResponse> createCoursePlace(@RequestParam Long courseDayId,
+    public ResponseEntity<JsonResponse<CoursePlaceDTO>> createCoursePlace(@RequestParam Long courseDayId,
             @RequestParam String contentId,
             @RequestParam String contentTypeId,
             @RequestParam LocalDateTime placeTime,
@@ -35,42 +34,42 @@ public class CoursePlaceController {
                 .createCoursePlace(courseDayId, contentId, contentTypeId, placeTime, courseOrder);
         if (coursePlace != null) {
             CoursePlaceDTO coursePlaceDTO = convertToDTO(coursePlace);
-            CoursePlaceJsonResponse response = new CoursePlaceJsonResponse(HttpStatus.CREATED.value(),
+            JsonResponse<CoursePlaceDTO> response = new JsonResponse<>(HttpStatus.CREATED.value(),
                     "Course place created successfully", coursePlaceDTO);
             return new ResponseEntity<>(response, HttpStatus.CREATED);
         } else {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
-                    .body(new CoursePlaceJsonResponse(HttpStatus.BAD_REQUEST.value(), "Course day not found", null));
+                    .body(new JsonResponse<>(HttpStatus.BAD_REQUEST.value(), "Course day not found", null));
         }
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<CoursePlaceJsonResponse> getCoursePlaceById(@PathVariable Long id) {
+    public ResponseEntity<JsonResponse<CoursePlaceDTO>> getCoursePlaceById(@PathVariable Long id) {
         Optional<CoursePlace> coursePlace = coursePlaceService.getCoursePlaceById(id);
         if (coursePlace.isPresent()) {
             CoursePlaceDTO coursePlaceDTO = convertToDTO(coursePlace.get());
-            CoursePlaceJsonResponse response = new CoursePlaceJsonResponse(HttpStatus.OK.value(), "Course place found",
+            JsonResponse<CoursePlaceDTO> response = new JsonResponse<>(HttpStatus.OK.value(), "Course place found",
                     coursePlaceDTO);
             return ResponseEntity.ok(response);
         } else {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(new CoursePlaceJsonResponse(HttpStatus.NOT_FOUND.value(), "Course place not found", null));
+                    .body(new JsonResponse<>(HttpStatus.NOT_FOUND.value(), "Course place not found", null));
         }
     }
 
     @GetMapping
-    public ResponseEntity<CoursePlaceJsonResponse> getAllCoursePlaces() {
+    public ResponseEntity<JsonResponse<CoursePlaceDTO>> getAllCoursePlaces() {
         List<CoursePlace> coursePlaces = coursePlaceService.getAllCoursePlaces();
         List<CoursePlaceDTO> coursePlaceDTOs = coursePlaces.stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
-        CoursePlaceJsonResponse response = new CoursePlaceJsonResponse(HttpStatus.OK.value(),
+                .toList();
+        JsonResponse<CoursePlaceDTO> response = new JsonResponse<>(HttpStatus.OK.value(),
                 "Course places retrieved successfully", null);
         return ResponseEntity.ok(response);
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<CoursePlaceJsonResponse> updateCoursePlace(@PathVariable Long id,
+    public ResponseEntity<JsonResponse<CoursePlaceDTO>> updateCoursePlace(@PathVariable Long id,
             @RequestParam String contentId,
             @RequestParam String contentTypeId,
             @RequestParam LocalDateTime placeTime,
@@ -79,19 +78,19 @@ public class CoursePlaceController {
                 .updateCoursePlace(id, contentId, contentTypeId, placeTime, courseOrder);
         if (updatedCoursePlace != null) {
             CoursePlaceDTO coursePlaceDTO = convertToDTO(updatedCoursePlace);
-            CoursePlaceJsonResponse response = new CoursePlaceJsonResponse(HttpStatus.OK.value(),
+            JsonResponse<CoursePlaceDTO> response = new JsonResponse<>(HttpStatus.OK.value(),
                     "Course place updated successfully", coursePlaceDTO);
             return ResponseEntity.ok(response);
         } else {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(new CoursePlaceJsonResponse(HttpStatus.NOT_FOUND.value(), "Course place not found", null));
+                    .body(new JsonResponse<>(HttpStatus.NOT_FOUND.value(), "Course place not found", null));
         }
     }
 
     @DeleteMapping("/{id}")
-    public ResponseEntity<CoursePlaceJsonResponse> deleteCoursePlace(@PathVariable Long id) {
+    public ResponseEntity<JsonResponse<CoursePlaceDTO>> deleteCoursePlace(@PathVariable Long id) {
         coursePlaceService.deleteCoursePlace(id);
-        CoursePlaceJsonResponse response = new CoursePlaceJsonResponse(HttpStatus.NO_CONTENT.value(),
+        JsonResponse<CoursePlaceDTO> response = new JsonResponse<>(HttpStatus.NO_CONTENT.value(),
                 "Course place deleted successfully", null);
         return ResponseEntity.noContent().build();
     }
